<resources>
    <string name="app_name">MyDetic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings…</string>
    <string name="title_activity_home">MyDetic</string>
    <string name="open_memory_list">Memory List</string>
    <string name="title_activity_memory_list">Memory List</string>
    <string name="list_view_desc">This is the List View</string>
    <string name="no_data">No data</string>
    <string name="title_activity_memory_detail">Memory Detail</string>
    <string name="def_memory_date">Memory Date</string>
    <string name="refreshbutton">Refresh</string>
    <string name="savebutton">Save</string>
    <string name="new_memory">Add a Memory</string>
    <string name="title_activity_settings">Settings</string>
    <string name="data_store_label">Data Store :</string>
    <string name="api_url_label">API URL :</string>
    <string name="user_name_label">UserName :</string>
    <string name="password_label">Password :</string>
    <string name="action_list">Memory List</string>
    <string name="action_new">Add Memory</string>
    <string name="action_reload">Reload</string>
    <string name="clear_local_cache">Clear Local Cache</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pin_1">1</string>
    <string name="pin_2">2</string>
    <string name="pin_3">3</string>
    <string name="pin_4">4</string>
    <string name="pin_5">5</string>
    <string name="pin_6">6</string>
    <string name="pin_7">7</string>
    <string name="pin_8">8</string>
    <string name="pin_9">9</string>
    <string name="pin_0">0</string>
    <string name="pin_star">*</string>
    <string name="pin_clear">X</string>
    <string name="enable_pin_lock">Enable PIN Lock</string>
    <string name="set_pin">Set PIN</string>
    <string name="enter_pin">Enter PIN :</string>
    <string name="pins_dont_match">PINs don\'t match</string>
    <string name="pin_not_valid">PIN not valid</string>
    <string name="ok">OK</string>
    <string name="action_thisweek">This week</string>
    <string name="action_thepast">The Past</string>
    <string name="enable_reminder">Enable Reminder</string>
    <string name="memory_unsaved">Unsaved</string>
    <string name="re_enter_pin">Re-enter PIN :</string>
    <string name="select_date">Select Date…</string>
    <string name="channel_name">MyDetic</string>
    <string name="channel_description">MyDetic Reminders</string>
    <string name="log_out_firebase">Log out Firebase</string>
    <string name="title_activity_migration">Migrate Memories</string>
    <string name="migrate_data">Migrate Data…</string>
    <string name="source_api">Source API</string>
    <string name="destination_api">Destination API</string>
</resources>
