<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.ghosttrails.www.mydetic.HomeActivity">
    <item android:id="@+id/action_list" android:title="@string/action_list"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_new" android:title="@string/action_new"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_reload" android:title="@string/action_reload"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
