<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="net.ghosttrails.www.mydetic.SettingsActivity"
                android:columnCount="2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/dataStoreLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/data_store_label"
                android:id="@+id/dataStoreTextView"
                android:textColor="@color/text_secondary"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dataStoreSpinner"
                style="@style/Base.TextAppearance.AppCompat"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/apiUrlEditText"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/api_url_label"
            android:id="@+id/apiUrlTextView"
            android:layout_below="@+id/dataStoreLayout"
            android:textColor="@color/text_secondary"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apiUrlEditText"
            android:layout_below="@+id/apiUrlTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="textUri"
            android:textColor="@color/text_secondary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/apiUserNameEditText"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_name_label"
            android:id="@+id/apiUserNameTextView"
            android:layout_below="@+id/apiUrlEditText"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apiUserNameEditText"
            android:layout_below="@+id/apiUserNameTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_secondary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/passwordEditText"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password_label"
            android:id="@+id/passwordTextView"
            android:layout_below="@+id/apiUserNameEditText"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordEditText"
            android:layout_below="@+id/passwordTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="textPassword"
            android:textColor="@color/text_secondary"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_local_cache"
            android:id="@+id/clear_cache_button"
            android:layout_below="@+id/passwordEditText"
            android:layout_alignParentStart="true"
            android:onClick="clearCacheClicked"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clear_cache_button">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_pin_lock"
                android:id="@+id/enablePinLock"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_pin"
                android:id="@+id/setPin"/>
        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/pin_fragment_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">


    </FrameLayout>

</RelativeLayout>
